<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava20.MainActivity"
    android:layout_gravity="center"
    android:background="@color/colorSecondary">

    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_weight="0"
        android:inputType="textCapWords"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/black_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:text=""
        android:layout_weight="0"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/username"
        android:layout_weight="1"
        android:layout_gravity="center">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/black_bar"
            android:rowCount="3"
            android:columnCount="3"
            android:scrollbarThumbVertical="@color/colorPrimaryDark">

            <Button
                android:id="@+id/latte_btn"
                android:drawableTop="@drawable/latte"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Latte"
                style="@style/button_style"/>

            <Button
                android:id="@+id/cappuccino_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/cappuccino"
                android:text="Cappuccino"
                style="@style/button_style"/>

            <Button
                android:id="@+id/flat_white_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/flat_white"
                android:text="@string/flat_white"
                style="@style/button_style"/>

            <Button
                android:id="@+id/espresso_btn"
                android:drawableTop="@drawable/espresso"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/espresso"
                style="@style/button_style"/>

            <Button
                android:id="@+id/cortado_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/cortado"
                android:text="@string/cortado"
                style="@style/button_style"/>

            <Button
                android:id="@+id/macchiato_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/macchiato"
                android:text="@string/macchiato"
                style="@style/button_style"/>

            <Button
                android:id="@+id/black_coffee_btn"
                android:drawableTop="@drawable/black_coffee"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/black_coffee"
                style="@style/button_style"/>

            <Button
                android:id="@+id/frappe_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/frappe"
                android:text="@string/frappe"
                style="@style/button_style"/>

            <Button
                android:id="@+id/mocha_btn"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:drawableTop="@drawable/mocha"
                android:text="@string/mocha"
                style="@style/button_style"/>




        </GridLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/summary_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:padding="8dp"
            android:textColor="@color/text"
            android:textSize="24dp"/>

        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/num_of_items_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_number"
            android:padding="8dp"
            android:textColor="@color/text"
            android:textSize="24dp"/>

    </RelativeLayout>



</LinearLayout>
