<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava20.SummaryPage"
    android:layout_gravity="center"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/summary"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Headline"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="X"
            android:textSize="24dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="right"
            android:onClick="close"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/username"
        android:layout_weight="1">

        <TextView
            android:id="@+id/order_summary_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/text"
            android:text="@string/initial_number"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginLeft="8dp"/>
    </ScrollView>



    <RelativeLayout
        android:id="@+id/summary_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_centerVertical="true"
            android:textColor="@color/text"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimaryLight"
            android:onClick="submitOrder"
            android:layout_margin="8dp"/>



    </RelativeLayout>



</LinearLayout>